[gd_scene load_steps=2 format=3 uid="uid://bkr3y8h5qnx2d"]

[ext_resource type="Script" path="res://code/UI/title_screen.gd" id="1_title_screen"]

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_title_screen")

[node name="BackgroundImage" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BackgroundColor" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TopSpacer" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="TitleContainer" type="CenterContainer" parent="MainContainer"]
layout_mode = 2

[node name="GameTitle" type="TextureRect" parent="MainContainer/TitleContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="MiddleSpacer" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ButtonContainer" type="CenterContainer" parent="MainContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PLAY !"

[node name="BottomSpacer" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
